Fixed header__footer alignment issues in header.css

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -63,6 +63,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: flex-end;
   margin: auto 80px 40px;
   z-index: 1;
 }
